# RayOlly

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  memory.md  skills.md  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/migrations/: alembic.ini  env.py
backend/migrations/clickhouse/: 001_initial_schema.sql  002_agent_observability.sql
backend/migrations/versions/: 001_initial_metadata.py
backend/rayolly/api/: app.py
backend/rayolly/api/middleware/: cors_config.py  error_handler.py  logging.py  rate_limit.py  rbac.py  request_id.py  tenant.py
backend/rayolly/api/routes/: agent_observability.py  agents.py  alert_data.py  alerts.py  apm.py  apm_data.py  auth.py  benchmarks.py  compat.py  dashboard.py  health.py  infrastructure.py  ingest.py  integrations.py  log_data.py  logs.py  marketplace.py  metric_data.py  query.py  rum.py  scim.py  sso.py  storage.py  synthetics.py  trace_data.py
backend/rayolly/core/: benchmarks.py  config.py  dependencies.py  health.py  logging.py
backend/rayolly/grpc/: runner.py  server.py
backend/rayolly/models/: agents.py  alerts.py  auth.py  query.py  telemetry.py
backend/rayolly/services/agents/: ab_testing.py  accuracy.py  ch_adapter.py  cost_forecaster.py  definitions.py  marketplace.py  memory.py  multi_model.py  observability.py  runtime.py  slos.py  streaming.py  tools.py  tracing.py
backend/rayolly/services/ai/: anomaly.py  forecaster.py  patterns.py
backend/rayolly/services/alerting/: evaluator.py  notifier.py
backend/rayolly/services/apm/: errors.py  latency.py  profiling.py  service_map.py  slo.py
backend/rayolly/services/auth/: encryption.py  scim.py  sso.py
backend/rayolly/services/infrastructure/: cloud.py  containers.py  hosts.py  kubernetes.py
backend/rayolly/services/ingestion/: enrichment.py  models.py  pii.py  pipeline.py  router.py  validators.py
backend/rayolly/services/integrations/: github.py  jira.py  pagerduty.py  registry.py  servicenow.py  slack.py  twilio.py  webhook.py
backend/rayolly/services/logging/: explorer.py  live_tail.py  views.py
backend/rayolly/services/metadata/: audit.py  auth.py  database.py  models.py  repositories.py
backend/rayolly/services/query/: connection_pool.py  engine.py  promql_parser.py  streaming.py
backend/rayolly/services/rum/: analytics.py  collector.py
backend/rayolly/services/storage/: cold_tier.py  direct_writer.py  retention.py  scheduler.py  writer.py
backend/rayolly/services/synthetics/: monitor.py  scheduler.py
backend/rayolly/utils/: __init__.py  sql.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_pipeline.py
backend/tests/integration/: test_clickhouse.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_anomaly_detector.py  test_drain_parser.py  test_forecaster.py  test_ingestion_pipeline.py  test_notifier.py  test_pii_detector.py  test_query_engine.py  test_service_map.py  test_slo_service.py  test_validators.py
docs/prds/: PRD-00-platform-vision.md  PRD-01-data-ingestion.md  PRD-02-storage-engine.md  PRD-03-query-engine.md  PRD-04-ai-ml-engine.md  PRD-05-ai-agents-platform.md  PRD-06-logs-module.md  PRD-07-metrics-module.md  PRD-08-tracing-apm.md  PRD-09-alerting-incidents.md  PRD-10-dashboards-frontend.md  PRD-11-natural-language.md  PRD-12-enterprise-security.md  PRD-13-deployment-infrastructure.md  PRD-14-api-platform.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
infra/docker/: nats.conf  (+2 more)
(+62 files in other folders)
